ci_cd/coder/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: coder
  namespace: ci-cd
  labels:
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
    app.kubernetes.io/part-of: ci-cd
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
